theme/assets/css/screen.css
/* ... */
input[type="text"]:focus,
input[type="email"]:focus,
input[type="search"]:focus,
input[type="tel"]:focus,
input[type="url"]:focus,
input[type="password"]:focus,
input[type="number"]:focus,
input[type="date"]:focus,
input[type="month"]:focus,
input[type="week"]:focus,
input[type="time"]:focus,
input[type="datetime"]:focus,
input[type="datetime-local"]:focus,
textarea:focus {
    border: #bbc7cc 1px solid;
    background: #fff;
    outline: none;
    outline-width: 0;
}

select {
    width: 270px;
    height: 30px;
    line-height: 30px;
}

button {
    min-height: 35px;
    width: auto;
    display: inline-block;
    padding: 0.1rem 1.5rem;
    cursor: pointer;
    outline: none;
    text-decoration: none;
    color: #fff;
    font-family: 'Open Sans', sans-serif;
    font-size: 11px; /* Hacks targeting Firefox. */
    line-height: 13px; /* Hacks targeting Firefox. */
    font-weight: 300;
    text-align: center;
    letter-spacing: 1px;
    text-transform: uppercase;
    text-shadow: none;
    border-radius: 0.3rem;
    border: rgba(0,0,0,0.05) 0.1em solid;
    background: #5ba4e5;
}

.icon-popout {
    width: 32px;
    height: 32px;
    float: left;
    margin-top: 2.5rem;
    margin-left: 2rem;
}

.github-popout {
    background: url('../imgs/github.png');
}

.rss-popout {
    background: url('../imgs/tdd.png');
}

.icon-popout:hover {
    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
    border-radius: 50% !important;
}


/* ==========================================================================
   3. Utilities - These things get used a lot
   ========================================================================== */

/* Clears shit */
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }

/* Hides shit */
.hidden {
    text-indent: -9999px;
    visibility: hidden;
    display: none;
}

/* Creates a responsive wrapper that makes our content scale nicely */
.inner {
    position: relative;
    width: 95%;
    margin: 0 auto;
}

/* Centres vertically yo. (IE8+) */
.vertical {
    display: table-cell;
    vertical-align: middle;
}

/* Wraps the main content & footer */
.site-wrapper {
    position: relative;
    z-index: 10;
    min-height: 100%;
    background: #003333;
    -webkit-transition: -webkit-transform 0.5s ease;
            transition: transform 0.5s ease;
}


/* ==========================================================================
   4. General - The main styles for the the theme
   ========================================================================== */

/* Big cover image on the home page */
.main-header {
    position: relative;
    display: table;
    width: 100%;
    margin-bottom: 5rem;
    text-align: center;
    background: #222 no-repeat center center;
    background-size: cover;
    overflow: hidden;
}

/* Navigation */
.new-nav ul {
    list-style: none;
    padding-top: 2.5rem !important;
    font-size: larger;
    float: right;
    padding-left: 6rem;
    margin: 0 !important;
}

.new-nav li {
    display: inline;
}

.new-nav li a {
    text-decoration: none;
    color: rgba(0,0,0,.8);
    padding: 20px;
}

.new-nav li a:hover {
    box-shadow: 0px -1px 10px gainsboro;
}

/* Put a semi-opaque radial gradient behind the icon to make it more visible
   on photos which happen to have a light background. */
.home-template .main-header:after {
    display: block;
    content: " ";
    width: 150px;
    height: 130px;
    border-radius: 100%;
    position: absolute;
    bottom: 0;
    left: 50%;
    margin-left: -75px;
    background: radial-gradient(ellipse at center,  rgba(0,0,0,0.15) 0%,rgba(0,0,0,0) 70%,rgba(0,0,0,0) 100%);
}

/* Hide when there's no cover image or on page2+ */
.no-cover.main-header:after,
.paged .main-header:after {
    display: none
}

/* The details of your blog. Defined in ghost/settings/ */
.page-title {
    margin: 10px 0 10px 0;
    float: left;
    font-size: 5rem;
    letter-spacing: -1px;
    font-weight: 700;
    font-family: "Open Sans", sans-serif;
    color: #fff;
}

.no-cover.main-header {
    background: url( '../imgs/triangular.png' );
}

.no-cover .page-title {
    color: rgba(0,0,0,0.8);
}

/* Every post, on every page, gets this style on its <article> tag */
.post {
    position: relative;
    width: 95%;
    margin: 6rem auto;
    padding-left: 2rem;
    border-left: #EBF2F6 5px solid;
    word-wrap: break-word;
}

body:not(.post-template) .post-title,
body:not(.page-template) .post-title {
    font-size: 3.6rem;
}

.post-title a {
    text-decoration: none;
}

.post-excerpt p {
    margin: 0;
    font-size: 0.9em;
    line-height: 1.7em;
}

.read-more {
    text-decoration: none;
}

.post-meta {
    display: block;
    margin: 1.75rem 0 0 0;
    font-family: "Open Sans", sans-serif;
    font-size: 1.5rem;
    line-height: 2.2rem;
    color: #9EABB3;
}

.post-meta a {
    color: #9EABB3;
    text-decoration: none;
}

.post-meta a:hover {
    text-decoration: underline;
}

.post-date {
    display: inline-block;
    text-transform: uppercase;
    font-size: 1.3rem;
    white-space: nowrap;
}

.end-content-hr {
    width: 95%;
    margin: 6rem auto;
}

/* ==========================================================================
   5. Single Post - When you click on an individual post
   ========================================================================== */

.post-template .post-header,
.page-template .post-header {
   margin-bottom: 3.4rem;
}

.post-template .post-title,
.page-template .post-title {
    margin-bottom: 0;
}

.post-template .post-meta,
.page-template .post-meta {
    margin: 0;
}

.post-template .post-date,
.page-template .post-date {
    padding: 0;
    margin: 0;
    border: none;
}
/* ... */

